1、增加规则，如果规格以‘CV’开头，系统按照横川的规则执行；否则，编号类型为‘JH001’，这种模式只判断任务单和规格是否有效，然后生成一个唯一的出厂编号，并关联任务单；

--- a/src/resource/db.properties
+++ b/src/resource/db.properties
@@ -22,6 +22,8 @@ sql.query.field.pressure = 4
 sql.query.field.temperature = 5
 sql.query.field.serialType = 6
 
+table.columnNames = \u4EFB\u52A1\u5355\u53F7,\u89C4\u683C,\u7089\u6279\u53F7,\u6750\u8D28,\u538B\u529B,\u6E29\u5EA6,\u7F16\u53F7\u7C7B\u578B
+
 #validator
 stamp.text.length = 17
 
@@ -29,7 +31,7 @@ stamp.text.length = 17
 serial.confirm = Y
 
 #file
-file.workPath = F:/WORK
+file.workPath = D:/WORK
 file.status = STATUS.TXT
 file.nr = NR.TXT
 file.end = END.TXT
@@ -38,3 +40,6 @@ file.status.running = RUNNING
 #file.status.overtime = NG\uFF1A\u63A5\u6536\u6253\u6807\u6570\u636E\u8D85\u65F6\uFF01
 #file.status.incorrectFormat = NG: \u4F20\u9012\u5185\u5BB9\u683C\u5F0F\u6709\u8BEF, \u8BF7\u68C0\u67E5! 
 file.status.ok = OK
+
+#url
+product.url = http://localhost:8080/jps/products/
