增加stamp.model：CYS/JH

--- a/src/resource/db.properties
+++ b/src/resource/db.properties
@@ -22,6 +22,7 @@ sql.query.field.pressure = 4
 sql.query.field.temperature = 5
 sql.query.field.serialType = 6
 
+#table
 table.columnNames = \u4EFB\u52A1\u5355\u53F7,\u89C4\u683C,\u7089\u6279\u53F7,\u6750\u8D28,\u538B\u529B,\u6E29\u5EA6,\u7F16\u53F7\u7C7B\u578B
 
 #validator
@@ -43,3 +44,6 @@ file.status.ok = OK
 
 #url
 product.url = http://localhost:8080/jps/products/
+
+#model
+stamp.model = CYS
