1、修改JH模式的bug

--- a/src/resource/db.properties
+++ b/src/resource/db.properties
@@ -45,5 +45,5 @@ file.status.ok = OK
 #url
 product.url = http://localhost:8080/jps/products/
 
-#model
+#model   If you want to switch 'JH',need modification Procedure 'generateSN'
 stamp.model = CYS
