1、增加“版本”字段

--- a/src/resource/db.properties
+++ b/src/resource/db.properties
@@ -13,7 +13,7 @@ sql.update = update rss.dbo.stamp set SMark=? where SContent = ?
 #sql.generateSerialNumber = select * from rss.dbo.StampSerial where SType = ?
 
 #sql query field
-sql.query.fieldName = billNo,model,batchNo,material,pressure,temperature,serialType
+sql.query.fieldName = billNo,model,batchNo,material,pressure,temperature,serialType,edition
 sql.query.field.billNo = 0
 sql.query.field.model = 1
 sql.query.field.batchNo = 2
@@ -21,9 +21,10 @@ sql.query.field.material = 3
 sql.query.field.pressure = 4
 sql.query.field.temperature = 5
 sql.query.field.serialType = 6
+sql.query.field.edition = 7
 
 #table
-table.columnNames = \u4EFB\u52A1\u5355\u53F7,\u89C4\u683C,\u7089\u6279\u53F7,\u6750\u8D28,\u538B\u529B,\u6E29\u5EA6,\u7F16\u53F7\u7C7B\u578B
+table.columnNames = \u4EFB\u52A1\u5355\u53F7,\u89C4\u683C,\u7089\u6279\u53F7,\u6750\u8D28,\u538B\u529B,\u6E29\u5EA6,\u7F16\u53F7\u7C7B\u578B,\u7248\u672C
 
 #validator
 stamp.text.length = 17
