--- a/src/resource/db.properties
+++ b/src/resource/db.properties
@@ -7,7 +7,7 @@ database.username        = sa
 
 #sql
 #sql.query = select top 20 a.FBillNo as 'billNo',case when charindex('(',b.FModel)>0 then rtrim(substring(b.FModel,1,charindex('(',b.FModel)-1)) else b.FModel end as 'model',a.FGMPBatchNo as 'batchNo',c1.SValue as 'material',c2.SValue as 'pressure',c3.SValue as 'temperature',c4.SValue as 'serialType' from ICMO a left join t_ICItem b on a.FItemID=b.FItemID left join rss.dbo.StampData c1 on SUBSTRING(b.FModel,8,1)=c1.SName and c1.SType=1 left join rss.dbo.StampData c2 on SUBSTRING(b.FModel,9,1)=c2.SName and c2.SType=2 left join rss.dbo.StampData c3 on SUBSTRING(b.FModel,10,1)=c3.SName and c3.SType=3 left join rss.dbo.StampData c4 on SUBSTRING(b.FModel,3,1)=c4.SName and c4.SType=4 where a.FBillNo like ? order by a.FCheckDate desc
-sql.insert = insert into rss.dbo.stamp(SContent,SDatetime,SMark,SBillNo) values(?,?,'N',?) 
+sql.insert = insert into rss.dbo.stamp(SContent,SDatetime,SMark,SBillNo,SSN) values(?,?,'N',?,?) 
 sql.update = update rss.dbo.stamp set SMark=? where SContent = ?
 #sql.update.serialNumber = update rss.dbo.StampSerial set SValue=? where SType=?
 #sql.generateSerialNumber = select * from rss.dbo.StampSerial where SType = ?
